--- a/app/src/main/res/layout/fragment_choose_wind.xml
+++ b/app/src/main/res/layout/fragment_choose_wind.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/choose_linear_1"
         android:gravity="end"
-        android:layout_marginStart="285dp">
+        android:layout_marginStart="260dp">
         <View
             android:layout_width="27dp"
             android:layout_height="27dp"
@@ -60,6 +60,12 @@
         android:background="@drawable/bg_choose_circle"
         >
     </View>
+    <org.sssta.zeroind.ui.RotateCircleView
+        android:layout_width="15dp"
+        android:layout_height="130dp"
+        android:layout_alignTop="@id/choose_wind_circle"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/bg_base_box_2"/>
 </RelativeLayout>
 
 </LinearLayout>
