--- a/app/src/main/res/layout/fragment_plane_receive.xml
+++ b/app/src/main/res/layout/fragment_plane_receive.xml
@@ -3,15 +3,15 @@
     android:layout_height="match_parent" tools:context="org.sssta.zeroind.fragment.PlaneReceive">
 
     <!-- TODO: Update blank fragment layout -->
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/swipeRefreshLayout">
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/swipeRefreshLayout">-->
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView_receive"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/recyclerView_receive"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="match_parent"/>-->
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
 </FrameLayout>
