--- a/app/src/main/res/layout/content_message_list.xml
+++ b/app/src/main/res/layout/content_message_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_light_blue"
+    android:id="@+id/swipe_message_layout"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_message_list"
     tools:context="org.sssta.zeroind.activity.MessageList">
@@ -13,4 +14,4 @@
     android:id="@+id/message_recycler_list"
     />
 
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
