--- a/app/src/main/res/layout/fragment_choose_wind.xml
+++ b/app/src/main/res/layout/fragment_choose_wind.xml
@@ -21,12 +21,14 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:id="@+id/wind_flag_changed"
             android:src="@drawable/wind_speed"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/wind_flag_name_text"
             android:text="无风带"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_marginLeft="15dp"
             />
     </LinearLayout>
@@ -65,6 +67,7 @@
         android:layout_height="130dp"
         android:layout_alignTop="@id/choose_wind_circle"
         android:layout_centerHorizontal="true"
+        android:id="@+id/rotate_flag"
         android:background="@drawable/bg_base_box_2"/>
 </RelativeLayout>
 
