--- a/app/src/main/res/layout/activity_read_wind_message.xml
+++ b/app/src/main/res/layout/activity_read_wind_message.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="org.sssta.zeroind.activity.ReadWindMessage">
+    tools:context="org.sssta.zeroind.activity.ReadMessageActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
