This update do all the callback word

--- a/app/src/main/res/layout/fragment_choose_wind.xml
+++ b/app/src/main/res/layout/fragment_choose_wind.xml
@@ -2,15 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="org.sssta.zeroind.fragment.ChooseWindFragment">
-<Button
+    tools:context="org.sssta.zeroind.fragment.ChooseWindFragment"
+    android:background="@color/colorPrimaryDark"
+    >
+<ImageButton
     android:layout_width="match_parent"
-    android:layout_height="30dp"
+    android:layout_height="40dp"
+    android:background="@drawable/bg_button_ripple_1"
+    android:src="@drawable/ic_direction_button"
     android:id="@+id/wind_edit_up"/>
 <RelativeLayout
 
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,6 +33,7 @@
             android:id="@+id/wind_flag_name_text"
             android:text="无风带"
             android:textSize="20sp"
+            android:textColor="#FFFFFF"
             android:layout_marginLeft="15dp"
             />
     </LinearLayout>
@@ -58,23 +64,26 @@
         android:layout_marginTop="120dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/choose_wind_circle"
-        android:background="@drawable/bg_choose_circle"
+        android:background="@drawable/bg_wind_direction_circle"
         >
     </View>
     <org.sssta.zeroind.ui.RotateCircleView
-        android:layout_width="15dp"
+        android:layout_width="40dp"
         android:layout_height="130dp"
         android:layout_alignTop="@id/choose_wind_circle"
         android:layout_centerHorizontal="true"
         android:id="@+id/rotate_flag"
-        android:background="@drawable/bg_base_box_2"/>
+        android:background="@drawable/bg_direction_flag"/>
 
     <ImageButton
         android:layout_width="match_parent"
-        android:layout_height="25dp"
+        android:layout_height="50dp"
         android:id="@+id/submit_content_button"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:background="@drawable/bg_button_ripple_1"
+        android:src="@drawable/ic_request_message"
+        android:scaleType="center"
+         />
 </RelativeLayout>
 
 </LinearLayout>
