--- a/app/src/main/res/layout/content_post_message.xml
+++ b/app/src/main/res/layout/content_post_message.xml
@@ -16,7 +16,9 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:clickable="true"
+            android:background="@drawable/bg_button_ripple_1"/>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
