--- a/app/src/main/res/layout/content_read_wind_message.xml
+++ b/app/src/main/res/layout/content_read_wind_message.xml
@@ -8,7 +8,7 @@
     tools:context="org.sssta.zeroind.activity.ReadMessageActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#87B6EA"
+    android:background="#FFFFFF"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="66666"
+                android:text="不了解的陌生人"
                 android:textSize="18sp"
                 android:layout_marginLeft="10dp"
                 android:id="@+id/message_level_text"/>
