--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:orientation="vertical"
     tools:context="org.sssta.zeroind.fragment.ChooseWindFragment">
     <!--<FrameLayout-->
         <!--android:layout_width="match_parent"-->
@@ -18,24 +17,29 @@
     <!--</FrameLayout>-->
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="330dp"
+        android:layout_height="400dp"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="80dp">
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/bg_edit_box_1"
+        android:id="@+id/edit_frame_layout">
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/wind_edit_text"
+            android:gravity="top"
              />
 
     </FrameLayout>
 
-    <Button
+    <ImageButton
         android:layout_width="match_parent"
         android:layout_height="50dp"
-
+        android:src="@drawable/ic_edit_done"
+        android:scaleType="center"
+        android:background="@color/colorPrimary"
         android:id="@+id/wind_edit_down"
+        android:layout_alignParentBottom="true"
         />
-</LinearLayout>
+</RelativeLayout>
 
